[gd_scene load_steps=26 format=2]

[ext_resource path="res://Entities/Characters/Player/PlayerSprite.png" type="Texture" id=1]
[ext_resource path="res://Entities/Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/agencyfb-boldcondensed.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Audio/Effects/PlayerHoverOn.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Audio/Effects/PlayerJump1.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Audio/Effects/PlayerLand2.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Audio/Effects/PlayerLand3.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/Audio/Effects/PlayerClick.wav" type="AudioStream" id=8]
[ext_resource path="res://Resources/Audio/Effects/PlayerJump3.wav" type="AudioStream" id=9]
[ext_resource path="res://Resources/Audio/Effects/PlayerDespawn2.wav" type="AudioStream" id=10]
[ext_resource path="res://Resources/Audio/Effects/PlayerDespawn3.wav" type="AudioStream" id=11]
[ext_resource path="res://Resources/Audio/Effects/PlayerDespawn1.wav" type="AudioStream" id=12]
[ext_resource path="res://Resources/Audio/Effects/PlayerJump2.wav" type="AudioStream" id=13]
[ext_resource path="res://Resources/Audio/Effects/PlayerLand1.wav" type="AudioStream" id=14]
[ext_resource path="res://Resources/Audio/Effects/PlayerSpawn.wav" type="AudioStream" id=15]
[ext_resource path="res://Resources/Audio/Effects/PlayerHoverOff.wav" type="AudioStream" id=16]
[ext_resource path="res://Resources/Audio/Effects/PortalHum.ogg" type="AudioStream" id=17]
[ext_resource path="res://Resources/Audio/Effects/PortalActivate.wav" type="AudioStream" id=18]
[ext_resource path="res://Resources/Audio/Effects/WaypointPickup.wav" type="AudioStream" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 31 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 1.24816, 0, 0, Vector2( 0.480315, 0.554545 ), -0.516852, -0.516852, 0, 0, Vector2( 1, 0 ), -1.51364, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
z_index = 5
script = ExtResource( 2 )
color_player = Color( 0.498039, 0.8, 0.85098, 1 )
color_pause = Color( 0.168627, 0.176471, 0.258824, 1 )
velocity_transition = Vector2( -25000, 0 )
velocity_max = Vector2( 50000, 75000 )
haccel = 5000
hdecel = 7500
jump = 50000
gravity = 1500

[node name="PlayerCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="PlayerTileMap" type="TileMap" parent="."]
format = 1

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="PauseTween" type="Tween" parent="."]

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CoyoteTimer" type="Timer" parent="."]
autostart = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 32, 32 )
amount = 128
lifetime = 1.5
texture = ExtResource( 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 1.0
angular_velocity = 250.0
angular_velocity_random = 1.0
orbit_velocity_random = 1.0
scale_amount = 0.0
scale_amount_random = 0.25
scale_amount_curve = SubResource( 2 )
color = Color( 0.937255, 0.137255, 0.235294, 1 )
hue_variation_curve = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=[
"player",
]]
position = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="DigCountLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.168627, 0.176471, 0.258824, 1 )
text = "05"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.5
margin_right = 69.5
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.929412, 0.94902, 0.956863, 1 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHoverOn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "Effects"

[node name="PlayerHoverOff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -10.0
bus = "Effects"

[node name="PlayerClick" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
bus = "Effects"

[node name="PlayerSpawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.0
bus = "Effects"

[node name="PortalActivate" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -25.0
bus = "Effects"

[node name="PortalHum" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -10.0
bus = "Effects"

[node name="PlayerDespawnGood" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -10.0
pitch_scale = 1.5
bus = "Effects"

[node name="PlayerJumps" type="Node2D" parent="."]

[node name="PlayerJump1" type="AudioStreamPlayer" parent="PlayerJumps"]
stream = ExtResource( 5 )
volume_db = -15.0
bus = "Effects"

[node name="PlayerJump2" type="AudioStreamPlayer" parent="PlayerJumps"]
stream = ExtResource( 13 )
volume_db = -15.0
bus = "Effects"

[node name="PlayerJump3" type="AudioStreamPlayer" parent="PlayerJumps"]
stream = ExtResource( 9 )
volume_db = -15.0
bus = "Effects"

[node name="PlayerLands" type="Node2D" parent="."]

[node name="PlayerLand1" type="AudioStreamPlayer" parent="PlayerLands"]
stream = ExtResource( 14 )
bus = "Effects"

[node name="PlayerLand2" type="AudioStreamPlayer" parent="PlayerLands"]
stream = ExtResource( 6 )
bus = "Effects"

[node name="PlayerLand3" type="AudioStreamPlayer" parent="PlayerLands"]
stream = ExtResource( 7 )
bus = "Effects"

[node name="PlayerDespawns" type="Node2D" parent="."]

[node name="PlayerDespawn1" type="AudioStreamPlayer" parent="PlayerDespawns"]
stream = ExtResource( 12 )
volume_db = -10.0
bus = "Effects"

[node name="PlayerDespawn2" type="AudioStreamPlayer" parent="PlayerDespawns"]
stream = ExtResource( 10 )
volume_db = -10.0
bus = "Effects"

[node name="PlayerDespawn3" type="AudioStreamPlayer" parent="PlayerDespawns"]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Effects"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
